--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,13 @@ flutter_icons:
   image_path: "fastlane/metadata/android/en-US/images/icon.png"
 
 flutter:
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Medium.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
 
   uses-material-design: true
-  
-  assets:
-    - assets/
+
+assets:
