--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   # DB
 
   # firebase
+  firebase_core: ^1.6.0
+  cloud_firestore: ^2.5.3
+  firebase_analytics: ^8.3.2
 
   # services
   provider: ^6.0.0
