--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
 
   flutter_lints: ^1.0.0
   flutter_launcher_icons: ^0.9.2
+  dart_code_metrics: ^4.3.1
 
 flutter_icons:
   android: "ic_launcher"
