--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,7 +9,7 @@
    metrics:
      cyclomatic-complexity: 20
      maximum-nesting-level: 5
-     number-of-parameters: 4
+    #  number-of-parameters: 6
      source-lines-of-code: 50
    metrics-exclude:
      - test/**
