--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,11 +51,17 @@ android {
         versionName flutterVersionName
         multiDexEnabled true
     }
-
+//     signingConfigs {
+//        release {
+//            keyAlias keystoreProperties['keyAlias']
+//            keyPassword keystoreProperties['keyPassword']
+//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+//            storePassword keystoreProperties['storePassword']
+//        }
+//    }
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+        //    signingConfig signingConfigs.release
             signingConfig signingConfigs.debug
         }
     }
