--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,19 +4,19 @@
 
  dart_code_metrics:
    anti-patterns:
-     - long-method
-     - long-parameter-list
+    #  - long-method
+    #  - long-parameter-list
    metrics:
-     cyclomatic-complexity: 20
-     maximum-nesting-level: 5
+    #  cyclomatic-complexity: 20
+    #  maximum-nesting-level: 5
     #  number-of-parameters: 6
-     source-lines-of-code: 50
+    #  source-lines-of-code: 50
    metrics-exclude:
      - test/**
    rules:
     #  - newline-before-return
-     - no-boolean-literal-compare
+    #  - no-boolean-literal-compare
     #  - no-empty-block
     #  - prefer-trailing-comma
-     - prefer-conditional-expressions
-     - no-equal-then-else
+    #  - prefer-conditional-expressions
+    #  - no-equal-then-else
