--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,17 +4,17 @@
 
  dart_code_metrics:
    anti-patterns:
-    #  - long-method
+     - long-method
     #  - long-parameter-list
    metrics:
-    #  cyclomatic-complexity: 20
+     cyclomatic-complexity: 20
     #  maximum-nesting-level: 5
     #  number-of-parameters: 6
     #  source-lines-of-code: 50
    metrics-exclude:
      - test/**
    rules:
-    #  - newline-before-return
+     - newline-before-return
     #  - no-boolean-literal-compare
     #  - no-empty-block
     #  - prefer-trailing-comma
