--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         <data android:scheme="https" />
       </intent>
     </queries>
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
         android:label="TrendMate"
         android:icon="@mipmap/ic_launcher">
