--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_core: ^1.6.0
   cloud_firestore: ^2.5.3
   firebase_analytics: ^8.3.2
+  firebase_auth: ^3.1.3
 
   # services
   provider: ^6.0.0
