--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
   intl: ^0.17.0
+  numeric_keyboard: ^1.1.0
+  # otp_screen: ^0.0.3
 
   # UI
   cached_network_image: ^3.1.0
