--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,12 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  carousel_slider: ^4.0.0
-  intl: ^0.17.0
-  numeric_keyboard: ^1.1.0
-  # otp_screen: ^0.0.3
 
   # UI
   cached_network_image: ^3.1.0
+  numeric_keyboard: ^1.1.0
+  carousel_slider: ^4.0.0
+  fluttertoast: ^8.0.8
 
   # DB
 
@@ -34,6 +33,7 @@ dependencies:
 
   # utils
   share_plus: ^3.0.4
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
