--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,7 +4,7 @@
 
  dart_code_metrics:
    anti-patterns:
-     - long-method
+    #  - long-method
     #  - long-parameter-list
    metrics:
      cyclomatic-complexity: 20
